tests/ui/rfcs/rfc-0000-never_patterns/diverges-not.stderr
error[E0308]: mismatched types
  --> $DIR/diverges-not.rs:12:26
   |
LL | fn wild_void(_: Void) -> u32 {}
   |    ---------             ^^^ expected `u32`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression

error[E0308]: mismatched types
  --> $DIR/diverges-not.rs:26:18
   |
LL |             _ => {}
   |                  ^^ expected `u32`, found `()`

error[E0308]: mismatched types
  --> $DIR/diverges-not.rs:31:30
   |
LL | fn binding_void(_x: Void) -> u32 {}
   |    ------------              ^^^ expected `u32`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression

error[E0308]: mismatched types
  --> $DIR/diverges-not.rs:46:19
   |
LL |             _x => {}
   |                   ^^ expected `u32`, found `()`

error[E0308]: mismatched types
  --> $DIR/diverges-not.rs:53:37
   |
LL |     if let true = true && let ! = x {}
   |                                     ^^ expected `u32`, found `()`

error[E0507]: cannot move out of `*ptr` which is behind a raw pointer
  --> $DIR/diverges-not.rs:37:18
   |
LL |         let _x = *ptr;
   |                  ^^^^ move occurs because `*ptr` has type `Void`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -         let _x = *ptr;
LL +         let _x = ptr;
   |

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0308, E0507.
For more information about an error, try `rustc --explain E0308`.
